--- a/env.example
+++ b/env.example
@@ -7,7 +7,7 @@
 DISCORD_TOKEN=YOUR_DISCORD_BOT_TOKEN_HERE
 
 # Lavalink Server Configuration
-LAVALINK_HOST=localhost
+LAVALINK_HOST=Lavalink
 LAVALINK_PORT=2333
 LAVALINK_PASSWORD=renifythoushallnotpass
 
